# tds-csv-kasim

./: .gitignore  LICENSE  cli.py  pyproject.toml  sample.csv
.github/workflows/: deploy.yml  release.yml
docs/: index.md  template.tex
site/: docusaurus.config.ts  package-lock.json
site/docs/: intro.md
