[project]
name = "tds-csv-kasim"
version = "0.1.0"
description = "Quickly explore a CSV file from the command line."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Kasim Dhilawala", email = "kasimdhilawala@gmail.com" }]
dependencies = ["typer", "rich>=13", "pandas"]

[project.scripts]
tds-csv = "cli:app"

[project.urls]
Homepage = "https://github.com/KASIM-S-DHILA/tds-csv-kasim"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["cli.py"]
